[package]
name = "sorbus"
version = "0.1.0"
edition = "2018"

authors = [
    "Aleksy Kladov <aleksey.kladov@gmail.com>",
    "Christopher Durham (CAD97) <cad97@cad97.com>",
]

[dependencies]
erasable = "1.2" # public
hashbrown = "0.7"
ptr-union = "2.0"
rc-borrow = "1.2" # public
slice-dst = "1.3" # public
text-size = "1.0" # public

# Hashbrown is used directly only for access to std's unstable hash_raw_entry.
# If/when hash_raw_entry is stabilized, this dependency should be removed.

[dev-dependencies]
criterion = "0.3"
insta = "0.16"

[[bench]]
name = "node_children"
harness = false
