[package]
name = "sorbus"
version = "0.1.0"
edition = "2018"

authors = [
    "Aleksy Kladov <aleksey.kladov@gmail.com>",
    "Christopher Durham (CAD97) <cad97@cad97.com>",
]

[dependencies]
erasable = "1.2" # public
hashbrown = "0.7"
ptr-union = "2.0"
rc-borrow = "1.2" # public
slice-dst = "1.4" # public
text-size = "1.0" # public

# Hashbrown is used directly only for access to std's unstable hash_raw_entry.
# If/when hash_raw_entry is stabilized, this dependency should be removed.

[dependencies.serde] # public
version = "1.0.106"
optional = true
default-features = false

[features]
ser = ["serde"]
de = ["serde", "serde/derive"]

[dev-dependencies]
criterion = "0.3"
insta = { version = "0.16", features = ["ron"] }
serde_json = "1.0.52"
serde_test = "1.0.106"

[[test]]
name = "serde"
required-features = ["ser", "de"]

[[bench]]
name = "node_children"
harness = false
