[package]
name = "sorbus"
version = "0.1.0"
edition = "2018"

authors = [
    "Aleksy Kladov <aleksey.kladov@gmail.com>",
    "Christopher Durham (CAD97) <cad97@cad97.com>",
]
license = "Apache-2.0 / MIT"

[dependencies]
ahash = "0.3"
erasable = "1.2" # public
hashbrown = "0.8"
ptr-union = "2.1"
rc-borrow = "1.3" # public
rc-box = { version = "1.1", features = ["slice-dst"] }
slice-dst = "1.4" # public
text-size = "1.0" # public

# Hashbrown is used directly only for access to std's unstable hash_raw_entry.
# If/when hash_raw_entry is stabilized, this dependency should be removed.

[dependencies.serde] # public
version = "1.0.110"
optional = true
default-features = false

[features]
ser = ["serde"]
de = ["serde", "serde/derive"]

[dev-dependencies]
criterion = "0.3"
insta = { version = "0.16", features = ["ron"] }
serde_json = "1.0.53"
serde_test = "1.0.110"

[[test]]
name = "serde"
required-features = ["ser", "de"]

[[bench]]
name = "node_children"
harness = false
